<resources>
    <string name="app_name">DolanTancepClient</string>
    <string name="poster">Poster</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="fav">Favorite</string>
    <string name="rate">Rate</string>
    <string name="data_kosong">Data Kosong</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="add">Add</string>
    <string name="ask_delete">Yakin untk menghapus?</string>
    <string name="delete_success">Data berhasil dihapus</string>
    <string name="provider_info">Content Provider Not Available</string>
</resources>
